--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/MSI/git/Java-Team-Project/src/mysql-connector-java-8.0.26.jar">
+	<classpathentry kind="lib" path="C:/_Server/mysql-connector-java-8.0.26/mysql-connector-java-8.0.26.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
